Fixed name alignment

--- a/sepm-groupphase/frontend/src/app/components/workout-exercises/workout-exercises.component.scss
+++ b/sepm-groupphase/frontend/src/app/components/workout-exercises/workout-exercises.component.scss
@@ -67,6 +67,4 @@
   margin-left: 20px;
 }
 
-h4 {
-  margin-top: 20px;
-}
+
